--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-03  Duarte Loreto <happyguy_pt@hotmail.com>
+
+	* pt.po: Updated Portuguese translation.
+
 2004-01-01  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
