2004-01-03  Michael Natterer  <mitch@gimp.org>
	* libgimp/gimp.def: updated. Patch from Michael Schumacher.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11882 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-03  Michael Natterer  <mitch@gimp.org>
+
+	* libgimp/gimp.def: updated. Patch from Michael Schumacher.
+
 2004-01-02  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/common/animationplay.c (build_dialog): NULL-terminate
