2004-01-03  Michael Natterer  <mitch@gimp.org>
	* app/display/gimpdisplayshell.c: some cosmetics while reviewing
	the code.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11883 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-01-03  Michael Natterer  <mitch@gimp.org>
 
+	* app/display/gimpdisplayshell.c: some cosmetics while reviewing
+	the code.
+
+2004-01-03  Michael Natterer  <mitch@gimp.org>
+
 	* libgimp/gimp.def: updated. Patch from Michael Schumacher.
 
 2004-01-02  Michael Natterer  <mitch@gimp.org>
