2004-01-03  Manish Singh  <yosh@gimp.org>
        * configure.in: check for shm_open in libc too, and define RT_LIBS
        accordingly.

        * gimptool-1.3.in
        * app/Makefile.am
        * libgimp/Makefile.am
        * plug-ins/*/Makefile.am
        * plug-ins/common/mkgen.pl: use RT_LIBS.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11884 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2004-01-03  Manish Singh  <yosh@gimp.org>
+
+	* configure.in: check for shm_open in libc too, and define RT_LIBS
+	accordingly.
+
+	* gimptool-1.3.in
+	* app/Makefile.am
+	* libgimp/Makefile.am
+	* plug-ins/*/Makefile.am
+	* plug-ins/common/mkgen.pl: use RT_LIBS.
+
 2004-01-03  Michael Natterer  <mitch@gimp.org>
 
 	* app/display/gimpdisplayshell.c: some cosmetics while reviewing
