2004-01-03  Manish Singh  <yosh@gimp.org>
        * configure.in: fix setting of RT_LIBS.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11885 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-01-03  Manish Singh  <yosh@gimp.org>
 
+	* configure.in: fix setting of RT_LIBS.
+
+2004-01-03  Manish Singh  <yosh@gimp.org>
+
 	* configure.in: check for shm_open in libc too, and define RT_LIBS
 	accordingly.
 
