2004-01-03  Manish Singh  <yosh@gimp.org>
        * plug-ins/twain/Makefile.am
        * plug-ins/winsnap/Makefile.am: minor tweaks, to match changes that
        were made in the other Makefiles long ago.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11886 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-01-03  Manish Singh  <yosh@gimp.org>
 
+	* plug-ins/twain/Makefile.am
+	* plug-ins/winsnap/Makefile.am: minor tweaks, to match changes that
+	were made in the other Makefiles long ago.
+
+2004-01-03  Manish Singh  <yosh@gimp.org>
+
 	* configure.in: fix setting of RT_LIBS.
 
 2004-01-03  Manish Singh  <yosh@gimp.org>
