--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2004-01-04  Michael Natterer  <mitch@gimp.org>
+
+	* app/core/gimpimage-contiguous-region.c
+	(gimp_image_contiguous_region_by_seed) 
+	(find_contiguous_region_helper)
+	(find_contiguous_segment): pass around GimpImage and GimpImageType
+	parameters. For indexed images, convert the tile data to RGB using
+	gimp_image_get_color(). Still use the raw tile data for RGB and
+	GRAY images so the slowdown for these image types should be
+	minimal. Fixes bug #128991.
+
 2004-01-03  Manish Singh  <yosh@gimp.org>
 
 	* plug-ins/twain/Makefile.am
