--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-04  Ville Pätsi  <drc@gimp.org>
+
+	* gimp.spec.in: Remove last hardcoded -1.3's.
+
 2004-01-04  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimpimage-contiguous-region.c
