--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-05  Dave Neary  <bolsh@gimp.org>
+
+	* NEWS: Update news.
+
 2004-01-05  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/png.c: applied a modified patch provided by
