2004-01-05  Michael Natterer  <mitch@gimp.org>
	* tools/pdbgen/Makefile.am
	* tools/pdbgen/groups.pl
	* tools/pdbgen/pdb/misc_tools.pdb: removed the "misc tools" PDB group.

	* tools/pdbgen/pdb/edit.pdb: added gimp_edit_bucket_fill() and
	gimp_edit_blend().

	* tools/pdbgen/pdb/image.pdb: added gimp_image_pick_color().

	* app/pdb/procedural_db.c
	* libgimp/gimpcompat.h: added compat stuff.

	* app/pdb/edit_cmds.c
	* app/pdb/image_cmds.c
	* app/pdb/internal_procs.c
	* app/pdb/misc_tools_cmds.c
	* libgimp/gimp_pdb.h
	* libgimp/gimpedit_pdb.[ch]
	* libgimp/gimpimage_pdb.[ch]: regenerated.

	* libgimp/Makefile.am
	* libgimp/gimpmisctools_pdb.[ch]: removed.

	* plug-ins/gfig/gfig.c
	* plug-ins/script-fu/scripts/3dTruchet.scm
	* plug-ins/script-fu/scripts/alien-glow-arrow.scm
	* plug-ins/script-fu/scripts/alien-glow-bar.scm
	* plug-ins/script-fu/scripts/alien-glow-bullet.scm
	* plug-ins/script-fu/scripts/alien-glow-button.scm
	* plug-ins/script-fu/scripts/alien-glow-logo.scm
	* plug-ins/script-fu/scripts/basic1-logo.scm
	* plug-ins/script-fu/scripts/basic2-logo.scm
	* plug-ins/script-fu/scripts/beveled-button.scm
	* plug-ins/script-fu/scripts/blended-logo.scm
	* plug-ins/script-fu/scripts/burn-in-anim.scm
	* plug-ins/script-fu/scripts/coffee.scm
	* plug-ins/script-fu/scripts/comic-logo.scm
	* plug-ins/script-fu/scripts/coolmetal-logo.scm
	* plug-ins/script-fu/scripts/glossy.scm
	* plug-ins/script-fu/scripts/gradient-bevel-logo.scm
	* plug-ins/script-fu/scripts/gradient-example.scm
	* plug-ins/script-fu/scripts/hsv-graph.scm
	* plug-ins/script-fu/scripts/pupi-button.scm
	* plug-ins/script-fu/scripts/rendermap.scm
	* plug-ins/script-fu/scripts/sphere.scm
	* plug-ins/script-fu/scripts/starscape-logo.scm
	* plug-ins/script-fu/scripts/test-sphere.scm
	* plug-ins/script-fu/scripts/textured-logo.scm
	* plug-ins/script-fu/scripts/title-header.scm
	* plug-ins/script-fu/scripts/weave.scm: follow "blend" and "color
	picker" changes. Leave "bucket fill" users unchanged because fill


--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,12 @@
+2004-01-05  Michael Natterer  <mitch@gimp.org>
+
+	* libgimp/libgimp-sections.txt: moved color_picker, blend and
+	bucket_fill to their new places.
+
+	* libgimp/tmpl/gimpedit.sgml
+	* libgimp/tmpl/gimpimage.sgml
+	* libgimp/tmpl/gimptools.sgml: regenerated.
+
 2003-12-20  Sven Neumann  <sven@gimp.org>
 
 	* app/app-docs.sgml
