2004-01-05  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/CEL.c: fixed coding style issues, removed
	trailing whitespace, use gsize instead of size_t.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11896 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-05  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/CEL.c: fixed coding style issues, removed
+	trailing whitespace, use gsize instead of size_t.
+
 2004-01-05  Dov Grobgeld  <dov@imagic.weizmann.ac.il>
 
 	* plug-ins/common/CEL.c: Added read and write support for 
