2004-01-05  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/CEL.c (need_palette): check the return value of
        fopen() before using it.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11897 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* plug-ins/common/CEL.c: fixed coding style issues, removed
 	trailing whitespace, use gsize instead of size_t.
+	(need_palette): check the return value of fopen() before using it.
 
 2004-01-05  Dov Grobgeld  <dov@imagic.weizmann.ac.il>
 
