--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -2,6 +2,10 @@
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
+2004-01-05  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: Updated italian translation.
+	
 2004-01-03  Duarte Loreto <happyguy_pt@hotmail.com>
 
 	* pt.po: Updated Portuguese translation.
